@@ -11,3 +11,4 @@ dist = Dist-Zilla-PluginBundle-ARODLAND
 [Prereqs]
 Dist::Zilla = 6
 Dist::Zilla::Plugin::ModuleBuildTiny = 0
+Dist::Zilla::Plugin::Prereqs::FromCPANfile = 0
