@@ -1,4 +1,8 @@
 {{$NEXT}}
+  * Add prereqs = cpanfile to support getting prereqs from cpanfile.
+  * no_autoprereq = 1 should now be spelled "prereqs = manual".
+  * AutoPrereq is still the default but can be specified as "prereqs = auto".
+  * Commit META.json and Makefile.PL/Build.PL for contributor friendliness
 
 Version 0.09: 2017-02-26
   * Add MetaJSON plugin
